include index and modelo.js

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -8,6 +8,13 @@
     <script src="./modelo.js"></script>
 </head>
 
-<body> </body>
+<body> 
+    <h1>Sprint 1</h1>
+    <script>
+        sistema = new Sistema();
+        sistema.agregarUsuario("Sergio");
+        sistema.agregarUsuario("Alberto");
+    </script>
+</body>
 
 </html>
