añadimos package.json, nodes y modificamos index.js

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sprint 1</title> 
-    <script src="./modelo.js"></script>
+    <script></script>
 </head>
 
 <body> 
     <h1>Sprint 1</h1>
     <script>
         sistema = new Sistema();
-        sistema.agregarUsuario("Sergio");
-        sistema.agregarUsuario("Alberto");
+        sistema.agregarUsuario("Pepe");
+        sistema.agregarUsuario("Juan");
     </script>
 </body>
 
