incluimos los app.get

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body> 
-    <h1>Sprint 1</h1>
+    <h1>Arquitectura Base</h1>
     <script>
-        sistema = new Sistema();
-        sistema.agregarUsuario("Pepe");
-        sistema.agregarUsuario("Juan");
+        //sistema = new Sistema();
+        //sistema.agregarUsuario("Pepe");
+        //sistema.agregarUsuario("Juan");
     </script>
 </body>
 
